# jawnix-tracker

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  admin.html  alembic.ini  app.py  config.example.js  docker-compose.yml  docker-entrypoint.sh  index.html  login.html  nixpacks.toml  portal-accept.html  portal.html  pyproject.toml  railway-start.sh  railway.json  supabase-schema.sql  theme.css
alembic/: env.py
alembic/versions/: 20260721_0001_vps_platform.py
docs/: ACCEPTANCE.md  OPERATIONS.md
jawnix/: __init__.py  allocation.py  api.py  auth.py  config.py  database.py  delivery.py  jobs.py  maintenance.py  models.py  schemas.py  slack.py  states.py  worker.py
jawnix_data/: __init__.py  __main__.py  backup_scheduler.py  cli.py  migration.py  scheduler.py  scraper.py
ops/: backup.sh  restore.sh
ops/initdb/: 10-replication.sh
scripts/: postgres_concurrency_acceptance.py  postgres_load_test.py  render-config.sh
templates/: Jawnix_Invoice_Template.docx
tests/: conftest.py  test_allocation.py  test_api.py  test_cli.py  test_delivery.py  test_migration.py  test_scraper.py  test_validation_security.py
